--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akun Pääkallosaari</title>
+    <title>Akun kirjasto</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-    <h2>Akun Pääkallosaari ;)</h2>
+    <h2>Akun kirjasto</h2>
 
     <div id="tablesContainer">
         <!-- Publications 1 to 5 -->
