--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div id="tablesContainer">
         <!-- Publications 1 to 5 -->
         <div class="table-container">
-            <button class="show-button" onclick="toggleTable('table1')">Show Publication 1</button>
+            <button class="show-button" onclick="toggleTable('table1')">Aku Ankka - Lehdet</button>
             <div id="table1Container" class="hidden">
                 <p>Updated at: <span id="update1"></span></p>
                 <p>Total count: <span id="count1"></span></p>
@@ -114,7 +114,7 @@
 
         <!-- Similar blocks for publications 2 to 5 -->
         <div class="table-container">
-            <button class="show-button" onclick="toggleTable('table2')">Show Publication 2</button>
+            <button class="show-button" onclick="toggleTable('table2')">Aku Ankka Extra</button>
             <div id="table2Container" class="hidden">
                 <p>Updated at: <span id="update2"></span></p>
                 <p>Total count: <span id="count2"></span></p>
@@ -141,7 +141,7 @@
         </div>
 
          <div class="table-container">
-            <button class="show-button" onclick="toggleTable('table3')">Show Publication 3</button>
+            <button class="show-button" onclick="toggleTable('table3')">Ankkalinnan ajankohtaiset - Ilmaiset</button>
             <div id="table3Container" class="hidden">
                 <p>Updated at: <span id="update3"></span></p>
                 <p>Total count: <span id="count3"></span></p>
@@ -168,7 +168,7 @@
         </div>
 
        <div class="table-container">
-            <button class="show-button" onclick="toggleTable('table4')">Show Publication 4</button>
+            <button class="show-button" onclick="toggleTable('table4')">Aku Ankan Taskukirjat</button>
             <div id="table4Container" class="hidden">
                 <p>Updated at: <span id="update4"></span></p>
                 <p>Total count: <span id="count4"></span></p>
@@ -195,7 +195,7 @@
         </div>
 
 <div class="table-container">
-            <button class="show-button" onclick="toggleTable('table5')">Show Publication 5</button>
+            <button class="show-button" onclick="toggleTable('table5')">Roope-Setä - lehdet</button>
             <div id="table5Container" class="hidden">
                 <p>Updated at: <span id="update5"></span></p>
                 <p>Total count: <span id="count5"></span></p>
