--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akun kirjasto</title>
-    <link rel="icon" href="ic_launcher.png" type="image/x-icon">
+    <link rel="icon" href="annaenole/ic_launcher.png" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
