--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lista Aku Ankan Taskukirjoista, Roope-Setä - Lehdistä, kuin myös kaikki muut lehdet">
+    <meta name="robots" content="index">
+
     <title>Akun kirjasto</title>
     <link rel="icon" href="annaenole/ic_launcher.png" type="image/x-icon">
     <style>
