--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="annaenole/ic_launcher.png" type="image/x-icon">
+    <link rel="icon" href="AkunKirjasto/ic_launcher.png" type="image/x-icon">
     <meta name="description" content="Lista Aku Ankan Taskukirjoista, Roope-Setä - Lehdistä, kuin myös kaikki muut lehdet">
     <title>Akun kirjasto</title>
         <style>
