--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta property="og:title" content="Akun Kirjasto"> 
+    <meta property="og:description" content="Tutustu Aku Ankan sarjakuvatunnusten, julkaisupäivien ja muiden tietojen maailmaan Akun Kirjastossa"> 
+    <meta property="og:image" content="https://annaenole.github.io/AkunKirjasto/5041-73cc4e1dea2bd092726f21f58a3b93742cd5a12b-listing.jpg"> 
+    <meta property="og:url" content="https://annaenole.github.io/AkunKirjasto/"> 
+    <meta property="og:type" content="website"> 
     <meta charset="UTF-8">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
