--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akun kirjasto</title>
      <style>
+
+         @font-face { font-family: 'GrilledCheeseBTN'; src: url('GrilledCheeseBTN.otf') format('opentype'); font-weight: normal; font-style: normal; }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
