--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <title>Akun kirjasto</title>
      <style>
 
-         @font-face { font-family: 'GrilledCheeseBTN'; src: url('GrilledCheeseBTN.otf') format('opentype'); font-weight: normal; font-style: normal; }
+         @font-face { 
+             font-family: 'GrilledCheeseBTN'; 
+             src: url('GrilledCheeseBTN.otf') format('opentype'); 
+             font-weight: normal; 
+             font-style: normal; 
+         }
         body {
             font-family: Arial, sans-serif;
             margin: 0;
